--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nodejs-mvc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/MinhHieu259/nodejs_mvc#readme",
   "dependencies": {
     "expess": "^0.0.1-security",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
